[tool.poetry]
name = "export_zenhub"
version = "0.1.0"
description = "Generates a CSV file from issues stored in GitHub and tickets from ZenHub"
authors = ["Stiff Neck Jim <22213990+stiffneckjim@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
